--- a/index.html
+++ b/index.html
@@ -209,18 +209,20 @@ class Asteroid extends Croquet.Model {
 
     hitBy(blast) {
         blast.ship.score++;
-        blast.destroy();
         if (this.size > 20) {
             // split into two smaller asteroids
             this.size *= 0.7;
             this.da *= 1.5;
-            const asteroid = Asteroid.create({ size: this.size, x: this.x, y: this.y, a: this.a, dx: this.dy, dy: -this.dx, da: -this.da });
+            this.dx = -blast.dy / 5;
+            this.dy = blast.dx / 5;
+            const asteroid = Asteroid.create({ size: this.size, x: this.x, y: this.y, a: this.a, dx: -this.dx, dy: -this.dy, da: -this.da });
             // move apart
             this.move(this.size / 2);
             asteroid.move(this.size / 2);
         } else {
             this.destroy();
         }
+        blast.destroy();
     }
 
     destroy() {
