--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ class Game extends Croquet.Model {
                 }
             }
             for (const ship of this.ships.values()) {
-                if (!ship.hit && ship.x + 10 > minx && ship.x - 10 < maxx && ship.y + 10 > miny && ship.y - 10 < maxy) {
+                if (!ship.wasHit && ship.x + 10 > minx && ship.x - 10 < maxx && ship.y + 10 > miny && ship.y - 10 < maxy) {
                     if (!ship.score && Math.abs(ship.x-500) + Math.abs(ship.y-500) < 40) continue;
                     ship.hitBy(asteroid);
                     break;
@@ -105,26 +105,26 @@ class Ship extends Croquet.Model {
         this.right = false;
         this.forward = false;
         this.score = 0;
-        this.hit = 0;
+        this.wasHit = 0;
     }
 
     leftThruster(active) {
-        if (this.hit) return;
+        if (this.wasHit) return;
         this.left = active;
     }
 
     rightThruster(active) {
-        if (this.hit) return;
+        if (this.wasHit) return;
         this.right = active;
     }
 
     forwardThruster(active) {
-        if (this.hit) return;
+        if (this.wasHit) return;
         this.forward = active;
     }
 
     fireBlaster() {
-        if (this.hit) return;
+        if (this.wasHit) return;
         const dx = Math.cos(this.a) * 20;
         const dy = Math.sin(this.a) * 20;
         const x = this.x + dx;
@@ -133,8 +133,8 @@ class Ship extends Croquet.Model {
     }
 
     move() {
-        if (this.hit) {
-            if (++this.hit > 60) this.reset();
+        if (this.wasHit) {
+            if (++this.wasHit > 60) this.reset();
         } else {
             if (this.forward) {
                 this.dx += Math.cos(this.a) * 0.5;
@@ -158,7 +158,7 @@ class Ship extends Croquet.Model {
     }
     hitBy(asteroid) {
         asteroid.destroy();
-        this.hit = 1;
+        this.wasHit = 1;
     }
 }
 Ship.register("Ship");
@@ -202,7 +202,7 @@ class Asteroid extends Croquet.Model {
     }
 
     hitBy(blast) {
-        if (!blast.ship.hit) blast.ship.score++;
+        if (!blast.ship.wasHit) blast.ship.score++;
         if (this.size > 20) {
             // split into two smaller asteroids
             this.size *= 0.7;
@@ -348,7 +348,7 @@ class Display extends Croquet.View {
             this.context.translate(x, y);
             if (ship.score) this.context.fillText(ship.score, 30, 15);
             this.context.rotate(a);
-            if (ship.hit) this.drawDebris(ship.hit);
+            if (ship.wasHit) this.drawDebris(ship.wasHit);
             else this.drawShip(ship.forward, ship.viewId === this.viewId);
             this.context.restore();
         }
