fix iOS Safari's long-touch select

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
                 overflow: hidden;
                 touch-action: none;
                 background: #999;
+                -webkit-touch-callout: none;
+                -webkit-user-select: none;
                 user-select: none;
             }
             #canvas {
