--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 -webkit-touch-callout: none;
                 -webkit-user-select: none;
                 user-select: none;
+                touch-action: none;
             }
             #canvas {
                 background: #000;
