--- a/index.html
+++ b/index.html
@@ -22,19 +22,23 @@
                 max-height: 100%;
             }
             #joystick {
-                display: none;
                 position: absolute;
+                right: 50px;
+                bottom: 50px;
                 width: 120px;
                 height: 120px;
-                border: 3px solid #CCC;
+                border: 3px solid #FFF;
                 border-radius: 60px;
+                opacity: 0.5;
             }
             #knob {
                 position: absolute;
+                left: 20px;
+                top: 20px;
                 width: 80px;
                 height: 80px;
                 border-radius: 40px;
-                background-color: #CCC;
+                background-color: #FFF;
             }
             #codelink {
                 position: fixed; bottom: 10px; right: 10px; padding: .5em; border-radius: 30px;
@@ -302,7 +306,11 @@ class Display extends Croquet.View {
         super(model);
         this.model = model;
 
+        const joystick = document.getElementById("joystick");
+        const knob = document.getElementById("knob");
+
         document.onkeydown = (e) => {
+            joystick.style.display = "none";
             if (e.repeat) return;
             switch (e.key) {
                 case "a": case "A": case "ArrowLeft":  this.publish(this.viewId, "left-thruster", true); break;
@@ -321,8 +329,6 @@ class Display extends Croquet.View {
         };
 
         let x = 0, y = 0, id = 0, right = false, left = false, forward = false;
-        const joystick = document.getElementById("joystick");
-        const knob = document.getElementById("knob");
         document.body.onpointerdown = (e) => {
             e.preventDefault();
             if (!id) {
@@ -332,8 +338,6 @@ class Display extends Croquet.View {
                 joystick.style.left = `${x - 60}px`;
                 joystick.style.top = `${y - 60}px`;
                 joystick.style.display = "block";
-                knob.style.left = `20px`;
-                knob.style.top = `20px`;
             }
         };
         document.body.onpointermove = (e) => {
@@ -368,7 +372,8 @@ class Display extends Croquet.View {
                 if (right) { this.publish(this.viewId, "right-thruster", false); right = false; }
                 if (left) { this.publish(this.viewId, "left-thruster", false); left = false;  }
                 if (forward) { this.publish(this.viewId, "forward-thruster", false); forward = false; }
-                joystick.style.display = "none";
+                knob.style.left = `20px`;
+                knob.style.top = `20px`;
             } else {
                 this.publish(this.viewId, "fire-blaster");
             }
